fix: improve wrapping in tables

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -463,13 +463,13 @@ table th {
 blockquote {
     margin: 8px 0;
     padding: 6px 10px 6px 12px;
-    border-left: 2px solid transparent;
+    border-left: 4px solid transparent;
     background-image: linear-gradient(180deg, rgba(129, 199, 132, 0.35), rgba(129, 199, 132, 0.15));
     background-position: left top;
     background-size: 2px 100%;
     background-repeat: no-repeat;
     color: var(--message-color);
-    opacity: 0.95;
+    opacity: 1;
 }
 
 img.md {
